--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App-3SecondLogo {
+  position: absolute;
+  height: 60px;
+  width: 60px; 
+  left: 60px;
+  top: 10px;
+  display: inline-block;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-column {
+  float: left;
+  width: 30%;
+  padding: 10px;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #FAFAF6;
+}
+.App-headerText {
+  position: absolute;
+  color: #19869E;
+  text-align: left;
+  font-family: 'Inter', sans-serif;
+  left: 80px;  
+  line-height: 0.25;
+  font-size: 24px;
 }
 
-.App-link {
-  color: #61dafb;
+.App-innerRectangle {
+  border-radius: 30px;
+  background: #FAFAF6;
+  position: absolute;
+  height: 350px;
+  width: 95%;
+  left: 40px;
+  top: 60px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-musicLogo {
+    position: absolute;
+    height: 400px;
+    width: 400px; 
+    right: 80px;
+    top: 80px;
+    display: inline-block;
 }
+
+.App-lowerSection {
+  background-color: #19869E;
+  height: 470px;
+  width: 100%;
+  position: absolute;
+  top: 700px;
+}
+
+.App-titleText {
+  color: #19869E;
+  font-family: 'Inter', sans-serif;
+  position: absolute;
+  left: 80px;
+  top: 120px;
+  font-size: 48px;
+  display: inline-block;
+
+}
+
