modified landing page and made a presentational component for it. the sound logois naturally blurry, so we may have to find a higher quality verson of it at a later date. Before: https://screenshot.googleplex.com/UQUbeSgJeTs After: https://screenshot.googleplex.com/46WxzrwzWfR

--- a/src/landingPage.css
+++ b/src/landingPage.css
@@ -1,22 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
-.App {
+.LandingPage {
   text-align: center;
 }
-.App-3SecondLogo {
+.LandingPage-3SecondLogo {
   position: absolute;
-  height: 60px;
-  width: 60px; 
-  left: 60px;
+  height: 50px;
+  width: 50px; 
+  left: 65px;
   top: 10px;
   display: inline-block;
 }
-.App-column {
+.LandingPage-column {
   float: left;
   width: 30%;
   padding: 10px;
 }
 
-.App-header {
+.LandingPage-header {
   background-color: white;
   min-height: 100vh;
   display: flex;
@@ -26,50 +26,51 @@
   font-size: calc(10px + 2vmin);
   color: #FAFAF6;
 }
-.App-headerText {
+.LandingPage-headerText {
   position: absolute;
   color: #19869E;
   text-align: left;
   font-family: 'Inter', sans-serif;
   left: 80px;  
   line-height: 0.25;
+  top: 200px;
   font-size: 20px;
 }
 
-.App-innerRectangle {
+.LandingPage-innerRectangle {
   border-radius: 30px;
   background: #FAFAF6;
   position: absolute;
-  height: 350px;
+  height: 200px;
   width: 95%;
   left: 40px;
-  top: 60px;
+  top: 30px;
 }
 
-.App-musicLogo {
+.LandingPage-musicLogo {
     position: absolute;
-    height: 400px;
-    width: 400px; 
+    height: 300px;
+    width: 300px; 
     right: 80px;
     top: 80px;
     display: inline-block;
 }
 
-.App-lowerSection {
+.LandingPage-lowerSection {
   background-color: #19869E;
-  height: 470px;
+  height: 250px;
   width: 100%;
   position: absolute;
-  top: 400px;
+  bottom: 0.5px;
 }
 
-.App-titleText {
+.LandingPage-titleText {
   color: #19869E;
   font-family: 'Inter', sans-serif;
   position: absolute;
   left: 80px;
   top: 120px;
-  font-size: 48px;
+  font-size: 36px;
   display: inline-block;
 
 }
