Updated Landing Page (#15)
* created landing page for 3 Second Challenge

Before: https://screenshot.googleplex.com/6vX0aThzJoy
After: https://screenshot.googleplex.com/UQUbeSgJeTs

* Delete App.test.js

Removed the App.test.js file. I'll add it again when we get navigation up and running.

* re-added test file to run simple rendering test.

* Added missing dependency

* Fixed tests

* Tests directory error fixed

* modified landing page and made a presentational component for it. the sound logois naturally blurry, so we may have to find a higher quality verson of it at a later date.
Before: https://screenshot.googleplex.com/UQUbeSgJeTs
After: https://screenshot.googleplex.com/46WxzrwzWfR

* fixed testing issue with original commit

Co-authored-by: tonioshikanlu <toni.oshikanlu9@gmail.com>
Co-authored-by: Perren Wright <34662374+perrenwright@users.noreply.github.com>

--- a/src/components/about.css
+++ b/src/components/about.css
@@ -2,7 +2,7 @@
 
 
 .about {
-    text-align: left;
+    text-align: center;
 }
 
 .about-column {
@@ -29,24 +29,24 @@
     font-family: 'Inter', sans-serif;
     left: 80px;  
     line-height: 0.25;
-    font-size: 24px;
-    top: 200px;
+    top: 250px;
+    font-size: 20px;
 }
   
 .about-innerRectangle {
-  border-radius: 30px;
-  background: #FAFAF6;
-  position: relative;
-  height: 350px;
-  width: 95%;
-  left: 40px;
-  top: 60px;
+    border-radius: 30px;
+    background: #FAFAF6;
+    position: absolute;
+    height: 200px;
+    width: 95%;
+    left: 40px;
+    top: 30px;
 }
 
 .about-musicLogo {
     position: absolute;
-    height: 400px;
-    width: 400px; 
+    height: 300px;
+    width: 300px; 
     right: 80px;
     top: 200px;
     display: inline-block;
@@ -54,10 +54,11 @@
 
 .about-lowerSection {
     background-color: #19869E;
-    height: 470px;
+    height: 250px;
     width: 100%;
-    position: relative;
-    top: 0px;
+    position: absolute;
+    right: 0px; 
+    top: 600px;
 }
 
 .about-titleText {
@@ -65,8 +66,8 @@
     font-family: 'Inter', sans-serif;
     position: absolute;
     left: 80px;
-    top: 120px;
-    font-size: 48px;
-    display: inline-block;  
+    top: 140px;
+    font-size: 36px;
+    display: inline-block;
 }
   
