Have not been able to fix the delete button  render issue. Help

--- a/src/components/card-component.css
+++ b/src/components/card-component.css
@@ -3,7 +3,7 @@
     display: table;
     padding-right: 30px;
     float:left;
-
+    margin-bottom: 50px;
 }
 .playlist-image {
     border-radius: 20px;
