--- a/src/components/card-component.css
+++ b/src/components/card-component.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 .card-component {
-    display: table;
+    display: inline-block;
     padding-right: 30px;
-    float:left;
 
 }
 .playlist-image {
@@ -19,8 +18,4 @@
     color: #19869E;
     font-family: 'Inter', sans-serif;
     font-size: 16px;
-}
-.class-float
-{
-    float:left;
 }
