Updating all my changes with Toni's changes for the basic demo of the app, except for global leaderboard

--- a/src/components/card-component.css
+++ b/src/components/card-component.css
@@ -4,6 +4,7 @@
     padding-right: 30px;
     float:left;
     margin-bottom: 50px;
+    margin-left: 50px;
 }
 .playlist-image {
     border-radius: 20px;
