--- a/src/components/about.css
+++ b/src/components/about.css
@@ -60,16 +60,58 @@
     right: 0px; 
     top: 571px;
 }
+.about-header2 {
+    background-color: white;
+    min-height: 100vh;
+    display: flex;
+    width: 1050px;
+    margin-left: auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: #FAFAF6;
+    margin-right: 50px;
+  }
 
 .about-titleText {
     color: #19869E;
     /* font-family: 'Inter', sans-serif; */
     position: absolute;
-    left: 150px;
+    left: 155.5px;
     top: 180px;
     font-size: 36px;
     display: inline-block;
 }
+.about-titleText2 {
+    color: #19869E;
+    /* font-family: 'Inter', sans-serif; */
+    position: absolute;
+    left: 100px;
+    right: 150px;
+    top: 180px;
+    font-size: 36px;
+    display: inline-block;
+}
+
 h2{
     color: #19869E;
+}
+.content{
+    justify-content: center;
+    display: flex;
+    margin-left: auto;
+}
+
+h6 {
+    color: #19869E;
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    margin-left: 30px;
+    width: 90%;
+    width: calc(100% - -1em);
+    margin-bottom: 50px;
+    /* justify-content: center; */
+    /* display: flex; */
+    left:50px;
 }
