--- a/src/components/globalleaderboard.css
+++ b/src/components/globalleaderboard.css
@@ -1,14 +1,46 @@
 .gbl {
-    text-align: center;
-  }
-  
+  text-align: center;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  justify-content: center;
+}
+
 .gbl-header {
-    background-color: white;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: black;
+  background-color: white;
+  color:#19869E;
+  width: 80%;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 180px;
+}
+
+.gbl-top3 {
+  padding-top: 50px;
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  position: absolute;
+  top: 250px;
+}
+
+.gbl-bottom2 {
+  width: 60%; 
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.gbl-lower{
+  background-color: #19869E;
+  height: 100;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0; 
 }
