--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 
-
 .about {
     text-align: center;
 }
@@ -26,10 +25,11 @@
     position: absolute;
     color: #19869E;
     text-align: left;
-    font-family: 'Inter', sans-serif;
-    left: 80px;  
+    font-family: 'Roboto';
+    left: 150px;  
     line-height: 0.25;
     top: 250px;
+    bottom: 10px;
     font-size: 20px;
 }
   
@@ -48,7 +48,7 @@
     height: 300px;
     width: 300px; 
     right: 80px;
-    top: 200px;
+    top: 190px;
     display: inline-block;
 }
 
@@ -58,16 +58,60 @@
     width: 100%;
     position: absolute;
     right: 0px; 
-    top: 600px;
+    top: 571px;
 }
+.about-header2 {
+    background-color: white;
+    min-height: 100vh;
+    display: flex;
+    width: 1050px;
+    margin-left: auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: #FAFAF6;
+    margin-right: 50px;
+  }
 
 .about-titleText {
     color: #19869E;
-    font-family: 'Inter', sans-serif;
+    /* font-family: 'Inter', sans-serif; */
     position: absolute;
-    left: 80px;
-    top: 140px;
+    left: 155.5px;
+    top: 180px;
     font-size: 36px;
     display: inline-block;
 }
-  
+.about-titleText2 {
+    color: #19869E;
+    /* font-family: 'Inter', sans-serif; */
+    position: absolute;
+    left: 100px;
+    right: 150px;
+    top: 180px;
+    font-size: 36px;
+    display: inline-block;
+}
+
+h2{
+    color: #19869E;
+}
+.content{
+    justify-content: center;
+    display: flex;
+    margin-left: auto;
+}
+
+h6 {
+    color: #19869E;
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    /* margin-left: 30px; */
+    width: 90%;
+    width: calc(100% - -1em);
+    margin-bottom: 50px;
+    /* justify-content: center; */
+    /* display: flex; */
+    left:50px;
+}
