--- a/src/components/card.css
+++ b/src/components/card.css
@@ -3,17 +3,13 @@
     display: table;
     padding-right: 30px;
     float:left;
-    margin-bottom: 50px;
-    margin-left: 55px;
 }
 .playlist-image {
     border-radius: 20px;
     height: 250px;
     width: 250px;
-    box-shadow: 0 3px 5px 2px rgba(192, 192, 192, .7);
-
 }
-.playlist-title {
+/* .playlist-title {
     color: #19869E;
     font-family: 'Inter', sans-serif;
     font-size: 20px;
@@ -26,5 +22,4 @@
 .class-float
 {
     float:left;
-
-}
+} */
